--- a/styles.css
+++ b/styles.css
@@ -237,11 +237,13 @@ body {
     background-color: #c82333;
 }
 
+
+/* Home Page */
 .home-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 40px;
     padding: 40px;
 }
 
@@ -260,12 +262,16 @@ body {
     margin-top: 15px;
 }
 
-.social-links a {
-    display: inline-block;
+.social-links a img {
+    width: 30px;
+    height: 30px;
     margin: 0 10px;
-    text-decoration: none;
-    color: #0073e6;
-    font-weight: bold;
+}
+
+.vertical-line {
+    width: 2px;
+    height: 150px;
+    background-color: #ccc;
 }
 
 .right-section {
