--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     width: 100%;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Shadow */
-    margin: 20px auto; /* Center the container */
+    margin: auto; /* Center the container */
     padding: 40px;
     display: flex;
     justify-content: center;
